--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@typechain/hardhat": "^2.0.1",
+    "dotenv": "^9.0.2",
     "ethers": "^5.1.4",
     "hardhat": "^2.3.0",
     "ts-generator": "^0.1.1",
